package co.edu.uniquindio.taller.punto2.model;

/**
 * Son los tipos de cuenta posibles
 */
public enum AccountType {
    /**
     * Tipo de cuenta ahorros
     */
    AHORROS,
    /**
     * Tipo de cuenta corriente
     */
    CORRIENTE
}